Faster type resolving